# aoc

./: .gitignore  CMakeLists.txt  lib.h  main.cpp
2015/: .gitignore  Program.cs  Utils.cs  aoc2015.csproj  aoc2015.sln
2015/.fleet/: run.json
2015/days/: Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs  Day09.cs  Day10.cs  Day11.cs  Day12.cs  Day13.cs  Day14.cs  Day15.cs  Day16.cs  Day17.cs  Day18.cs  Day19.cs  Day20.cs  Day21.cs  Day22.cs  Day22_old.cs  Day23.cs  Day24.cs  Day25.cs  IDay.cs
2024/: CMakeLists.txt  ProgramSimulation.txt  gen_days.py  lib.h  main.cpp
2024/days/: Day11.h  Day12.cpp  Day13.cpp  Day13.h  Day14.cpp  Day14.h  Day15.cpp  Day15.h  Day16.cpp  Day16.h  Day17.cpp  Day18.cpp  Day18.h  Day19.cpp  Day19.h  Day2.h  Day20.cpp  Day20.h  Day21.cpp  Day22.cpp  Day22.h  Day23.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day8.cpp  Day9.cpp  Day9.h
days/: Day1.cpp  Day1.h  Day10.cpp  Day10.h  Day11.cpp  Day12.cpp  Day12.h  Day13.cpp  Day14.cpp  Day15.cpp  Day17.h  Day18.cpp  Day2.cpp  Day21.h  Day23.cpp  Day23.h  Day24.cpp  Day24.h  Day25.cpp  Day25.h  Day3.h  Day4.h  Day5.cpp  Day5.h  Day6.cpp  Day6.h  Day7.cpp  Day7.h  Day8.h
